Update partition reset tests, account for returned list out of order